完成订单查询和消息通知